# ssh-connect

./: .gitignore  Cargo.toml  config.toml  config.toml.dest  config.yml.dist
adapter/: Cargo.toml
adapter/src/: lib.rs
adapter/src/argument_parser/: mod.rs
adapter/src/file_manager/: mod.rs
adapter/src/progress_bar/: mod.rs
adapter/src/server_stream/: mod.rs
configuration/: Cargo.toml
configuration/src/: lib.rs
configuration/src/app_configuration/: app_configuration.rs
src/: app_configuration.rs  main.rs  settings.rs
ssh-connect/: Cargo.toml
ssh-connect/src/: main.rs
