[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
configuration = { path = "../configuration" }
ssh2 = "0.9"
rpassword = "5.0.1"
indicatif = "0.16.2"
