[package]
name = "ssh-connect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configuration = { version = "0.1", path = "../configuration" }
adapter = { version = "0.1", path = "../adapter" }
chrono = "0.4"
indicatif = "0.16.2"
